--- a/views/host.gohtml
+++ b/views/host.gohtml
@@ -26,9 +26,397 @@ Host
         <hr>
     </div>
 </div>
+
+<div class="row">
+    <div class="col">
+
+        <form method="post" action="/admin/host/{{host.ID}}" novalidate class="needs-validation" id="host-form">
+
+            <input type="hidden" id="action" name="action" value="1">
+            <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+            <ul class="nav nav-tabs" id="host-tabs" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#host-content" data-target="" data-toggle="tab"
+                       id="host-tab" role="tab">Host</a>
+                </li>
+
+                {{if host.ID > 0}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#service-content" data-target="" data-toggle="tab"
+                           id="services-tab" role="tab">Manage Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#healthy-content" data-target="" data-toggle="tab"
+                           id="healthy-tab" role="tab">Healthy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#warning-content" data-target="" data-toggle="tab"
+                           id="warning-tab" role="tab">Warning</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#problem-content" data-target="" data-toggle="tab"
+                           id="problem-tab" role="tab">Problems</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#pending-content" data-target="" data-toggle="tab"
+                           id="pending-tab" role="tab">Pending</a>
+                    </li>
+                {{end}}
+
+            </ul>
+
+            <div class="tab-content" id="host-tab-content" style="min-height: 55vh">
+
+                <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="host-tab"
+                     id="host-content">
+                    <div class="row">
+                        <div class="col-md-6 col-xs-12">
+
+                            <div class="mt-3 mb-3">
+                                <label for="host_name" class="form-label">Host Name</label>
+                                <input required id="host_name" name="host_name" value="{{host.HostName}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="canonical_name" class="form-label">Canonical Name</label>
+                                <input required id="canonical_name" name="canonical_name" value="{{host.CanonicalName}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="url" class="form-label">URL</label>
+                                <input required id="url" name="url" value="{{host.URL}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="ip" class="form-label">IP Address (v4)</label>
+                                <input id="ip" name="ip" value="{{host.IP}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="ipv6" class="form-label">IP Address (v6)</label>
+                                <input id="ipv6" name="ipv6" value="{{host.IPV6}}" type="text" class="form-control">
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-6 col-xs-12">
+
+                            <div class="mt-3 mb-3">
+                                <label for="location" class="form-label">Location</label>
+                                <input id="location" name="location" value="{{host.Location}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="os" class="form-label">Operating System</label>
+                                <input id="os" name="os" value="{{host.OS}}" type="text" class="form-control">
+                            </div>
+
+                            <div class="form-check form-switch">
+                                <label class="form-check-label" for="active">Active</label>
+                                <input class="form-check-input" value="1" {{if host.Active == 1}} checked {{end}} type="checkbox" id="active" name="active">
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                            <div class="btn-group dropend">
+                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">
+                                    Save
+                                </button>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="javascript:void(0);" onclick="saveClose()">Save &amp;
+                                        Close</a>
+                                    <a class="dropdown-item" href="javascript:void(0);" onclick="val()">Save &amp; Continue</a>
+                                </div>
+                            </div>
+
+                            <a class="btn btn-info" href="/admin/host/all">Cancel</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{if host.ID > 0}}
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="service-tab"
+                         id="service-content">
+
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="mt-3">Services</h3>
+
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>Service</th>
+                                        <th>Status</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {{range host.HostServices}}
+                                        <tr>
+                                            <td>{{.Service.ServiceName}}</td>
+                                            <td>
+                                                <div class="form-check form-switch">
+                                                    <label class="form-check-label" for="http_service">Active</label>
+                                                    <input class="form-check-input" value="1" type="checkbox"
+                                                           {{if .Active == 1}}
+                                                            checked
+                                                           {{end}}
+                                                           data-type="toggle-service"
+                                                           data-service="{{.ServiceID}}"
+                                                           data-host-id="{{.HostID}}"
+                                                           name="{{.Service.ServiceName}}">
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    {{end}}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="healthy-tab"
+                         id="healthy-content">
+                        <div class="row">
+                            <div class="col">
+
+                                <h4 class="mt-3">Healthy Services</h4>
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>Service</th>
+                                        <th>Last Check</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {{range host.HostServices}}
+                                            {{if .Status == "healthy"}}
+                                                <tr>
+                                                    <td>
+                                                        <span class="{{.Service.Icon}}"></span>
+                                                        {{.Service.ServiceName}}
+                                                        <span class="badge bg-secondary-dark" onclick="checkNow({{.ID}})">Check Now</span>
+                                                    </td>
+                                                    <td>
+                                                        {{if dateAfterYearOne(.LastCheck)}}
+                                                            {{dateFromLayout(.LastCheck, "2006-01-02 15:30:30")}}
+                                                        {{else}}
+                                                            Pending...
+                                                        {{end}}
+                                                    </td>
+                                                </tr>
+                                            {{end}}
+                                        {{end}}
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="warning-tab"
+                         id="warning-content">
+                        <div class="row">
+                            <div class="col">
+
+                                <h4 class="mt-3">Warning Services</h4>
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>Service</th>
+                                        <th>Last Check</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {{range host.HostServices}}
+                                            {{if .Status == "warning"}}
+                                                <tr>
+                                                    <td>
+                                                        <span class="{{.Service.Icon}}"></span>
+                                                        {{.Service.ServiceName}}
+                                                        <span class="badge bg-secondary-dark" onclick="checkNow({{.ID}})">Check Now</span>
+                                                    </td>
+                                                    <td>
+                                                        {{if dateAfterYearOne(.LastCheck)}}
+                                                            {{dateFromLayout(.LastCheck, "2006-01-02 15:30:30")}}
+                                                        {{else}}
+                                                        Pending...
+                                                        {{end}}
+                                                    </td>
+                                                </tr>
+                                            {{end}}
+                                        {{end}}
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="problem-tab"
+                         id="problem-content">
+                        <div class="row">
+                            <div class="col">
+
+                                <h4 class="mt-3">Problem Services</h4>
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>Service</th>
+                                        <th>Last Check</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {{range host.HostServices}}
+                                            {{if .Status == "problem"}}
+                                                <tr>
+                                                    <td>
+                                                        <span class="{{.Service.Icon}}"></span>
+                                                        {{.Service.ServiceName}}
+                                                        <span class="badge bg-secondary-dark" onclick="checkNow({{.ID}})">Check Now</span>
+                                                    </td>
+                                                    <td>
+                                                        {{if dateAfterYearOne(.LastCheck)}}
+                                                            {{dateFromLayout(.LastCheck, "2006-01-02 15:30:30")}}
+                                                        {{else}}
+                                                        Pending...
+                                                        {{end}}
+                                                    </td>
+                                                </tr>
+                                            {{end}}
+                                        {{end}}
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" role="tabpanel" aria-labelledby="pending-tab"
+                         id="pending-content">
+                        <div class="row">
+                            <div class="col">
+
+                                <h4 class="mt-3">Pending Services</h4>
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Service</th>
+                                            <th>Last Check</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {{range host.HostServices}}
+                                            {{if .Status == "pending"}}
+                                                <tr>
+                                                    <td>
+                                                        <span class="{{.Service.Icon}}"></span>
+                                                        {{.Service.ServiceName}}
+                                                        <span class="badge bg-secondary-dark" onclick="checkNow({{.ID}})">Check Now</span>
+                                                    </td>
+                                                    <td>
+                                                        {{if dateAfterYearOne(.LastCheck)}}
+                                                            {{dateFromLayout(.LastCheck, "2006-01-02 15:30:30")}}
+                                                        {{else}}
+                                                        Pending...
+                                                        {{end}}
+                                                    </td>
+                                                </tr>
+                                            {{end}}
+                                        {{end}}
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                {{end}}
+
+            </div>
+
+        </form>
+
+    </div>
+</div>
 {{end}}
 
 
 {{ block js() }}
+    <script>
+        document.addEventListener("DOMContentLoaded", function (){
+            let toggles = document.querySelectorAll("[data-service]");
 
+            for (let i = 0; i < toggles.length; i++) {
+                console.log("Service:", toggles[i].getAttribute("data-service"))
+                console.log("Host:", toggles[i].getAttribute("data-host-id"))
+
+                toggles[i].addEventListener("change", function (){
+
+                    let active = "1";
+                    if (!this.checked) {
+                        active = "0";
+                    }
+
+                    let formData = new FormData();
+                    formData.append("host_id", this.getAttribute("data-host-id"));
+                    formData.append("service_id", this.getAttribute("data-service"));
+                    formData.append("active", active);
+                    formData.append("csrf_token", "{{.CSRFToken}}");
+
+                    fetch("/admin/host/ajax/toggle-service", {
+                        method: "POST",
+                        body: formData,
+                    }).then(response => response.json())
+                        .then(data => {
+                            if (data.ok) {
+                                successAlert("Changes saved")
+                            } else {
+                                errorAlert("Something go wrong!")
+                            }
+                        })
+                })
+            }
+        })
+
+        function val() {
+            document.getElementById("action").value = 0;
+            let form = document.getElementById("host-form");
+            if (form.checkValidity() === false) {
+                errorAlert("Error: check all tabs!");
+                this.event.preventDefault();
+                this.event.stopPropagation();
+            }
+            form.classList.add('was-validated');
+
+            if (form.checkValidity() === true) {
+                form.submit();
+            }
+        }
+
+        function saveClose() {
+            document.getElementById("action").value = 1;
+            let form = document.getElementById("host-form");
+            if (form.checkValidity() === false) {
+                errorAlert("Error: check all tabs!");
+                this.event.preventDefault();
+                this.event.stopPropagation();
+
+            }
+            form.classList.add('was-validated');
+
+            if (form.checkValidity() === true) {
+                form.submit();
+            }
+        }
+
+        function checkNow(id) {
+            console.log("check now "+ id)
+        }
+    </script>
 {{end}}
