--- a/views/host.gohtml
+++ b/views/host.gohtml
@@ -189,17 +189,18 @@ Host
                             <div class="col">
 
                                 <h4 class="mt-3">Healthy Services</h4>
-                                <table class="table table-striped">
+                                <table id="healthy-table" class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Service</th>
                                         <th>Last Check</th>
+                                        <th>Message</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
                                             {{if .Status == "healthy"}}
-                                                <tr>
+                                                <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
                                                         {{.Service.ServiceName}}
@@ -212,6 +213,7 @@ Host
                                                             Pending...
                                                         {{end}}
                                                     </td>
+                                                    <td></td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -228,17 +230,18 @@ Host
                             <div class="col">
 
                                 <h4 class="mt-3">Warning Services</h4>
-                                <table class="table table-striped">
+                                <table id="warning-table" class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Service</th>
                                         <th>Last Check</th>
+                                        <th>Message</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
                                             {{if .Status == "warning"}}
-                                                <tr>
+                                                <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
                                                         {{.Service.ServiceName}}
@@ -251,6 +254,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
+                                                    <td></td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -267,17 +271,18 @@ Host
                             <div class="col">
 
                                 <h4 class="mt-3">Problem Services</h4>
-                                <table class="table table-striped">
+                                <table id="problem-table" class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Service</th>
                                         <th>Last Check</th>
+                                        <th>Message</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
                                             {{if .Status == "problem"}}
-                                                <tr>
+                                                <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
                                                         {{.Service.ServiceName}}
@@ -290,6 +295,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
+                                                    <td></td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -306,17 +312,18 @@ Host
                             <div class="col">
 
                                 <h4 class="mt-3">Pending Services</h4>
-                                <table class="table table-striped">
+                                <table id="pending-table" class="table table-striped">
                                     <thead>
                                         <tr>
                                             <th>Service</th>
                                             <th>Last Check</th>
+                                            <th>Message</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         {{range host.HostServices}}
                                             {{if .Status == "pending"}}
-                                                <tr>
+                                                <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
                                                         {{.Service.ServiceName}}
@@ -329,6 +336,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
+                                                    <td></td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
