update servies page real time using ws

--- a/views/host.gohtml
+++ b/views/host.gohtml
@@ -359,6 +359,7 @@ Host
 
 {{ block js() }}
     <script>
+        // Manage Services toggle function
         document.addEventListener("DOMContentLoaded", function (){
             let toggles = document.querySelectorAll("[data-service]");
 
