--- a/views/hosts.gohtml
+++ b/views/hosts.gohtml
@@ -46,7 +46,7 @@
             {{range hosts}}
             <tr>
                 <td><a href="/admin/host/{{.ID}}">{{.HostName}}</a></td>
-                <td></td>
+                <td>{{.HostName}}</td>
                 <td>{{.OS}}</td>
                 <td>{{.Location}}</td>
                 <td>
