--- a/views/partials/js.gohtml
+++ b/views/partials/js.gohtml
@@ -18,6 +18,73 @@
 
     publicChannel.bind("app-stopping", function (data) {
         warningAlert(data.message);
+
+        // Schedule page table
+        let scheduleTableExists = !!document.getElementById("schedule-table");
+        if (scheduleTableExists) {
+            let scheduleTable = document.getElementById("schedule-table");
+            scheduleTable.tBodies[0].innerHTML = "";
+
+            let newRow = scheduleTable.tBodies[0].insertRow(-1);
+            let newTd = newRow.insertCell(0);
+            newTd.setAttribute("colspan", "5");
+            newTd.innerHTML = "No scheduled checks!"
+        }
+    })
+
+    publicChannel.bind("schedule-changed-event", function (data) {
+        let scheduleTableExists = !!document.getElementById("schedule-table");
+        if (scheduleTableExists) {
+            let scheduleTable = document.getElementById("schedule-table");
+            
+            // check to see if the table contains "No scheduled checks!"
+            let tableContent = scheduleTable.innerHTML;
+            if (tableContent.includes("No scheduled checks!")) {
+                let rowCount = scheduleTable.rows.length;
+                for (let i = rowCount -1; i > 0; i--) {
+                    scheduleTable.deleteRow(i);
+                }
+            }
+
+            // delete existing row
+            let rowExists = !!document.getElementById("schedule-" + data.host_service_id);
+            if (rowExists) {
+                let row = document.getElementById("schedule-" + data.host_service_id);
+                row.parentNode.removeChild(row);
+            }
+
+            let newRow = scheduleTable.tBodies[0].insertRow(-1);
+            newRow.setAttribute("id", "schedule-" + data.host_service_id);
+
+            // 1st td
+            let newTd = newRow.insertCell(0);
+            let newText = document.createTextNode(data.host);
+            newTd.appendChild(newText)
+
+            // 2nd td
+            newTd = newRow.insertCell(1);
+            newText = document.createTextNode(data.service);
+            newTd.appendChild(newText)
+
+            // 3rd td
+            newTd = newRow.insertCell(2);
+            newText = document.createTextNode(data.schedule);
+            newTd.appendChild(newText)
+
+            // 4th td
+            newTd = newRow.insertCell(3);
+            newText = document.createTextNode(data.last_run);
+            newTd.appendChild(newText)
+
+            // 5th td
+            newTd = newRow.insertCell(4);
+            if (data.next_run === undefined) {
+                newText = document.createTextNode("Pending...")
+            } else {
+                newText = document.createTextNode(data.next_run)
+            }
+            newTd.appendChild(newText)
+        }
     })
 
     publicChannel.bind("host-service-status-changed", function (data) {
@@ -149,7 +216,7 @@
     // - scheduled changed
     // - monitoring is turned off
     // - next-run-event
-    // - schedule-changed-event
+    // - 
     // - 
 
     function addServiceRow(table, data) {
@@ -174,7 +241,7 @@
         newTd = newRow.insertCell(3);
         newTd.innerHTML = `${data.message}`
     }
-    
+
     let attention = Prompt();
 
     {{if .Flash != ""}}
