add migration table events; add column last_message; add example code sending to private-channel

--- a/views/events.gohtml
+++ b/views/events.gohtml
@@ -36,7 +36,21 @@
             </tr>
             </thead>
             <tbody>
-
+            {{if len(events) > 0}} 
+                {{range events}} 
+                <tr id="event-{{.ID}}">
+                    <td>{{.EventType}}</td>
+                    <td>{{.HostName}}</td>
+                    <td>{{.ServiceName}}</td>
+                    <td>{{dateFromLayout(.CreatedAt, "2006-01-02 3:04:05 PM")}}</td>
+                    <td>{{.Message}}</td>
+                </tr>
+                {{end}}
+            {{else}} 
+                <tr>
+                    <td colspan="4" class="align-middle">No events</td>
+                </tr>
+            {{end}}
             </tbody>
         </table>
     </div>
