--- a/views/host.gohtml
+++ b/views/host.gohtml
@@ -213,7 +213,7 @@ Host
                                                             Pending...
                                                         {{end}}
                                                     </td>
-                                                    <td></td>
+                                                    <td>{{.LastMessage}}</td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -254,7 +254,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
-                                                    <td></td>
+                                                    <td>{{.LastMessage}}</td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -295,7 +295,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
-                                                    <td></td>
+                                                    <td>{{.LastMessage}}</td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
@@ -336,7 +336,7 @@ Host
                                                         Pending...
                                                         {{end}}
                                                     </td>
-                                                    <td></td>
+                                                    <td>{{.LastMessage}}</td>
                                                 </tr>
                                             {{end}}
                                         {{end}}
