--- a/views/partials/js.gohtml
+++ b/views/partials/js.gohtml
@@ -13,10 +13,14 @@
     let publicChannel = pusher.subscribe("public-channel");
 
     publicChannel.bind("app-starting", function (data) {
+        let toggle = document.getElementById("monitoring-live")
+        toggle.checked = true;
         successAlert(data.message);
     })
 
     publicChannel.bind("app-stopping", function (data) {
+        let toggle = document.getElementById("monitoring-live")
+        toggle.checked = false;
         warningAlert(data.message);
 
         // Schedule page table
@@ -209,6 +213,23 @@
         }
     })
 
+    publicChannel.bind("schedule-item-removed-event", function (data) {
+        let rowExists = !!document.getElementById("schedule-" + data.host_service_id);
+        if (rowExists) {
+            let row = document.getElementById("schedule-" + data.host_service_id);
+            row.parentNode.removeChild(row)
+
+            // check to see if we need to add a "No scheduled checks!"
+            let scheduleTable = document.getElementById("schedule-table");
+            if (scheduleTable.rows.length === 1) {
+                let newRow = scheduleTable.tBodies[0].insertRow(-1);
+                let newTd = newRow.insertCell(0);
+                newTd.setAttribute("colspan", "5");
+                newTd.innerHTML = "No scheduled checks!"
+            }
+        }
+    })
+
     // events things we want to look for
     // - service goes down
     // - service goes up
@@ -218,6 +239,16 @@
     // - next-run-event
     // - 
     // - 
+
+    // sample code to send message via private-channel
+    let privateChannel = pusher.subscribe("private-channel-{{.User.ID}}");
+
+    privateChannel.bind("private-message", function(data) {
+        attention.alert({
+            html: data.message,
+            icon: 'success',
+        })
+    })
 
     function addServiceRow(table, data) {
         let newRow = table.tBodies[0].insertRow(-1);
