--- a/views/host.gohtml
+++ b/views/host.gohtml
@@ -199,7 +199,7 @@ Host
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
-                                            {{if .Status == "healthy"}}
+                                            {{if .Status == "healthy" && .Active == 1}}
                                                 <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
@@ -240,7 +240,7 @@ Host
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
-                                            {{if .Status == "warning"}}
+                                            {{if .Status == "warning" && .Active == 1}}
                                                 <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
@@ -281,7 +281,7 @@ Host
                                     </thead>
                                     <tbody>
                                     {{range host.HostServices}}
-                                            {{if .Status == "problem"}}
+                                            {{if .Status == "problem" && .Active == 1}}
                                                 <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
@@ -322,7 +322,7 @@ Host
                                     </thead>
                                     <tbody>
                                         {{range host.HostServices}}
-                                            {{if .Status == "pending"}}
+                                            {{if .Status == "pending" && .Active == 1}}
                                                 <tr id="host-service-{{.ID}}">
                                                     <td>
                                                         <span class="{{.Service.Icon}}"></span>
